@@ -4492,6 +4492,312 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+comment|// Test RM restarts after previous attempt succeeded and was saved into state
+comment|// store but before the RMAppAttempt notifies RMApp that it has succeeded. On
+comment|// recovery, RMAppAttempt should send the AttemptFinished event to RMApp so
+comment|// that RMApp can recover its state.
+annotation|@
+name|Test
+DECL|method|testRMRestartWaitForPreviousSucceededAttempt ()
+specifier|public
+name|void
+name|testRMRestartWaitForPreviousSucceededAttempt
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|conf
+operator|.
+name|setInt
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|RM_AM_MAX_ATTEMPTS
+argument_list|,
+literal|2
+argument_list|)
+expr_stmt|;
+name|MemoryRMStateStore
+name|memStore
+init|=
+operator|new
+name|MemoryRMStateStore
+argument_list|()
+block|{
+name|int
+name|count
+init|=
+literal|0
+decl_stmt|;
+annotation|@
+name|Override
+specifier|public
+name|void
+name|updateApplicationStateInternal
+parameter_list|(
+name|ApplicationId
+name|appId
+parameter_list|,
+name|ApplicationStateDataPBImpl
+name|appStateData
+parameter_list|)
+throws|throws
+name|Exception
+block|{
+if|if
+condition|(
+name|count
+operator|==
+literal|0
+condition|)
+block|{
+comment|// do nothing; simulate app final state is not saved.
+name|LOG
+operator|.
+name|info
+argument_list|(
+name|appId
+operator|+
+literal|" final state is not saved."
+argument_list|)
+expr_stmt|;
+name|count
+operator|++
+expr_stmt|;
+block|}
+else|else
+block|{
+name|super
+operator|.
+name|updateApplicationStateInternal
+argument_list|(
+name|appId
+argument_list|,
+name|appStateData
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+decl_stmt|;
+name|memStore
+operator|.
+name|init
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+name|RMState
+name|rmState
+init|=
+name|memStore
+operator|.
+name|getState
+argument_list|()
+decl_stmt|;
+name|Map
+argument_list|<
+name|ApplicationId
+argument_list|,
+name|ApplicationState
+argument_list|>
+name|rmAppState
+init|=
+name|rmState
+operator|.
+name|getApplicationState
+argument_list|()
+decl_stmt|;
+comment|// start RM
+name|MockRM
+name|rm1
+init|=
+operator|new
+name|MockRM
+argument_list|(
+name|conf
+argument_list|,
+name|memStore
+argument_list|)
+decl_stmt|;
+name|rm1
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|MockNM
+name|nm1
+init|=
+name|rm1
+operator|.
+name|registerNode
+argument_list|(
+literal|"127.0.0.1:1234"
+argument_list|,
+literal|15120
+argument_list|)
+decl_stmt|;
+name|RMApp
+name|app0
+init|=
+name|rm1
+operator|.
+name|submitApp
+argument_list|(
+literal|200
+argument_list|)
+decl_stmt|;
+name|MockAM
+name|am0
+init|=
+name|MockRM
+operator|.
+name|launchAndRegisterAM
+argument_list|(
+name|app0
+argument_list|,
+name|rm1
+argument_list|,
+name|nm1
+argument_list|)
+decl_stmt|;
+name|FinishApplicationMasterRequest
+name|req
+init|=
+name|FinishApplicationMasterRequest
+operator|.
+name|newInstance
+argument_list|(
+name|FinalApplicationStatus
+operator|.
+name|SUCCEEDED
+argument_list|,
+literal|""
+argument_list|,
+literal|""
+argument_list|)
+decl_stmt|;
+name|am0
+operator|.
+name|unregisterAppAttempt
+argument_list|(
+name|req
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|am0
+operator|.
+name|waitForState
+argument_list|(
+name|RMAppAttemptState
+operator|.
+name|FINISHING
+argument_list|)
+expr_stmt|;
+comment|// app final state is not saved. This guarantees that RMApp cannot be
+comment|// recovered via its own saved state, but only via the event notification
+comment|// from the RMAppAttempt on recovery.
+name|Assert
+operator|.
+name|assertNull
+argument_list|(
+name|rmAppState
+operator|.
+name|get
+argument_list|(
+name|app0
+operator|.
+name|getApplicationId
+argument_list|()
+argument_list|)
+operator|.
+name|getState
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// start RM
+name|MockRM
+name|rm2
+init|=
+operator|new
+name|MockRM
+argument_list|(
+name|conf
+argument_list|,
+name|memStore
+argument_list|)
+decl_stmt|;
+name|nm1
+operator|.
+name|setResourceTrackerService
+argument_list|(
+name|rm2
+operator|.
+name|getResourceTrackerService
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|rm2
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|rm2
+operator|.
+name|waitForState
+argument_list|(
+name|app0
+operator|.
+name|getCurrentAppAttempt
+argument_list|()
+operator|.
+name|getAppAttemptId
+argument_list|()
+argument_list|,
+name|RMAppAttemptState
+operator|.
+name|FINISHED
+argument_list|)
+expr_stmt|;
+name|rm2
+operator|.
+name|waitForState
+argument_list|(
+name|app0
+operator|.
+name|getApplicationId
+argument_list|()
+argument_list|,
+name|RMAppState
+operator|.
+name|FINISHED
+argument_list|)
+expr_stmt|;
+comment|// app final state is saved via the finish event from attempt.
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+name|RMAppState
+operator|.
+name|FINISHED
+argument_list|,
+name|rmAppState
+operator|.
+name|get
+argument_list|(
+name|app0
+operator|.
+name|getApplicationId
+argument_list|()
+argument_list|)
+operator|.
+name|getState
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 annotation|@
 name|Test
 DECL|method|testRMRestartFailedApp ()
